# Reportes_automatizados

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  commit_message.txt  conftest.py  debug_reports.py  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
.venv_script/: pyvenv.cfg
config/: settings.py  urls.py
crud_app/: admin.py  apps.py  exceptions.py  filters.py  models.py  permissions.py  serializers.py  serializers_auth.py  serializers_reconciliation.py  serializers_uploads.py  signals.py  test_auth_claims.py  test_conflictos.py  test_reconciliation.py  test_uploads.py  tests.py  urls.py  views.py  views_auth.py  views_reconciliation.py  views_reports.py  views_uploads.py
crud_app/management/commands/: seed_db.py
crud_app/migrations/: 0001_initial.py  0002_alter_compra_proveedor.py  0003_alter_venta_cliente.py  0004_auto_20251107_1951.py  0005_historicalproducto.py  0006_historicalproducto_deleted_at_producto_deleted_at.py  0007_historicalproducto_created_by_and_more.py  0008_proveedor_created_by_proveedor_deleted_at_and_more.py  0009_cliente_created_by_cliente_deleted_at_and_more.py  0010_compra_created_by_compra_deleted_at_and_more.py  0011_venta_created_by_venta_deleted_at_venta_updated_at_and_more.py  0012_compraimportada_ventaimportada.py  0013_conflicto.py  0014_alter_cliente_email_alter_historicalcliente_email_and_more.py  0015_add_ruc_and_factura_fields.py
frontend/: angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/auth/guards/: auth.guard.ts
frontend/src/app/auth/interceptors/: auth.interceptor.ts
frontend/src/app/auth/services/: auth.service.ts  auth.ts
frontend/src/app/dashboard/dashboard/: dashboard.component.spec.ts  dashboard.html  (+3 more)
frontend/src/app/interfaces/: api-models.ts
frontend/src/app/services/: api.service.ts  theme.service.ts
scripts/: generate_test_data.py  seed_database_direct.py
test_data/: compras_test.xlsx  datos_unificados_test.xlsx  ventas_test.xlsx
(+31 files in other folders)
